--- a/Pipfile
+++ b/Pipfile
@@ -7,6 +7,11 @@ verify_ssl = true
 
 [packages]
 flask = "*"
+flask-sqlalchemy = "*"
+flask-marshmallow = "*"
+marshmallow-sqlalchemy = "*"
+flask-cors = "*"
+flask-heroku = "*"
 
 [requires]
 python_version = "3.8"
