--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,8 @@ flask-cors = "*"
 flask-heroku = "*"
 flask-mail = "*"
 python-dotenv = "*"
+gunicorn = "*"
+psycopg2 = "*"
 
 [requires]
 python_version = "3.8"
